[package]
name = "dogstatsd-utils"
version = "0.1.0"
edition = "2021"


[dependencies]
zstd = "0.12.4"
byteorder = "1.4.3"
mime = "0.3.17"
new_mime_guess = "4.0.1"
prost = "0.11.9"
bytes = "1.0.1"
indicatif = "0.16.0"
clap = { version = "4.3.23", features = ["derive"] }
thiserror = "1.0"
histo = "1.0.0"
lading-payload = { git = "https://github.com/DataDog/lading.git", branch = "sopell/default-valueconf", features = ["dogstatsd_perf"] }
lading-throttle = { git = "https://github.com/DataDog/lading.git", branch = "main" }
rand = { default-features = false, features = ["small_rng", "std", "std_rng" ]}
tokio = { version = "1.32", features = ["time"] }
byte-unit = "4.0"


[build-dependencies]
prost-build = "0.11.9"

[profile.release-with-debug]
inherits = "release"
debug = true
