[package]
name = "dogstatsd-utils"
version = "0.1.0"
edition = "2021"


[dependencies]
zstd = "0.12.4"
byteorder = "1.4.3"
mime = "0.3.17"
new_mime_guess = "4.0.1"
prost = "0.11.9"
bytes = "1.0.1"
indicatif = "0.16.0"
clap = { version = "4.3.23", features = ["derive"] }
thiserror = "1.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "std", "std_rng" ]}
tokio = { version = "1.32", features = ["time"] }
byte-unit = "4.0"
regex = "1.10.3"
lazy_static = "1.4.0"
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"]  }
tracing-subscriber = { version = "0.3", default-features = false, features = ["smallvec", "fmt", "tracing-log", "std", "env-filter", "json"] }
divan = "0.1.5"
smallvec = "2.0.0-alpha.1"
pcap-file = "2.0.0-rc1"
lading-payload = { git = "https://github.com/DataDog/lading.git", branch = "sopell/generate-serialize-impl" }
lading-throttle = { git = "https://github.com/DataDog/lading.git", branch = "sopell/generate-serialize-impl" }
lading = { git = "https://github.com/DataDog/lading.git", branch = "sopell/generate-serialize-impl" }
pnet = "0.34.0"
serde_yaml = "0.9.31"
sketches-ddsketch = "0.2.2"
chrono = "0.4.33"
human_bytes = "0.4.3"



[build-dependencies]
prost-build = "0.11.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "dogstatsdmsg"
harness = false

[[bench]]
name = "analysis"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = true
